# baseUnits

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  unit_addition.md
.github/workflows/: docs.yml  test.yml
api/: index.html
architecture/: index.html
baseUnits/: units.py
checked/: index.html
contributing/: index.html
docs/: api.md  architecture.md  checked.md  contributing.md  index.md  quickstart.md  switching-systems.md  the-one-rule.md
docs/scripts/: gen_unit_tables.py
examples/: examples.ipynb
quickstart/: index.html
scripts/: gen_stubs.py  gen_unit_tables.py
search/: search_index.json
src/baseUnits/: __init__.py  __init__.pyi  _factors.py  _make_system.py  _unit_consts.pyi  constants.py  dimension.py  quantity.py  units.py
src/baseUnits/checked/: __init__.py  dimension.py  quantity.py  units.py
src/baseUnits/checked/dimensions/: __init__.py  angle.py  density.py  energy.py  force.py  length.py  mass.py  power.py  pressure.py  temperature.py  time.py  unit_weight.py
src/baseUnits/dimensions/: __init__.py  angle.py  density.py  energy.py  force.py  length.py  mass.py  power.py  pressure.py  temperature.py  time.py  unit_weight.py
src/baseUnits/systems/: N_m.py  N_m_s.py  N_m_s.pyi  N_mm.py  N_mm_s.py  N_mm_s.pyi  cgs.py  dyne_cm_s.py  dyne_cm_s.pyi  kN_m.py  kN_m_s.py  kN_m_s.pyi  kg_cm_s.py  kgf_m.py  kgf_m_s.py  kgf_m_s.pyi  kip_in.py  kip_in_s.py  kip_in_s.pyi  mks.py  tf_m_s.py  tf_m_s.pyi
switching-systems/: index.html
systems/: index.html
test/: test_checked.py  test_consistency.py  test_conversions.py  test_core_logic.py  test_default_system.py  test_integration.py  test_systems_parity.py
the-one-rule/: index.html
