[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseUnits"
version = "1.1.0"
description = "A units management library."
readme = "README.md"
authors = [
    {name = "Nicolas Mora Bowen", email = "nmorabowen@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/nmorabowen/baseUnits"
"Bug Tracker" = "https://github.com/nmorabowen/baseUnits/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}} 

[tool.setuptools.package-data]
"*" = ["*.ipynb"]