[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseUnits"
version = "1.1.0"
description = "A units management library."
readme = "README.md"
authors = [
    {name = "Nicolas Mora Bowen", email = "nmorabowen@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "pymdown-extensions>=10",
]

[project.urls]
"Homepage" = "https://github.com/nmorabowen/baseUnits"
"Bug Tracker" = "https://github.com/nmorabowen/baseUnits/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}} 

[tool.setuptools.package-data]
"*" = ["*.ipynb"]
# Ship the PEP 561 marker and type stubs so downstream type-checkers see the
# dynamically-populated unit names.
"baseUnits" = ["py.typed", "*.pyi", "systems/*.pyi"]

[tool.pyright]
# This is a src-layout package. Installed as a setuptools "strict" editable
# install, its imports are served by an import-hook finder
# (__editable__.baseUnits-*.finder.py) that Pylance/Pyright cannot follow
# statically, surfacing as `reportMissingImports` for `import baseUnits`.
# Pointing extraPaths at src lets static analysis resolve the package
# regardless of how (or whether) it is installed.
include = ["src", "test"]
extraPaths = ["src"]